# flux-cli

./: CMakeLists.txt  README.md  install.sh  setup.sh
src/: api.cpp  api.hpp  cli.cpp  cli.hpp  config.cpp  config.hpp  dev.cpp  dev.hpp  file.cpp  file.hpp  main.cpp  package.cpp  package.hpp  plugin.cpp  plugin.hpp  system.cpp  system.hpp  utils.cpp  utils.hpp
